index mobile rwd

--- a/aloha-index.html
+++ b/aloha-index.html
@@ -17,7 +17,7 @@
         <div class="container d-flex jc-space-between ai-center">
             <h1 class="logo">
                 <a href="./aloha-index.html" alt="ALOHA">ALOHA</a>
-            </h1>
+            </h1>            
             <ul class="d-flex ai-center nav-list">
                 <li>
                     <div class="lan-list d-flex ai-center mr-m">
@@ -33,6 +33,17 @@
                 </li>
                 <li class="mr-m">
                     <a href="">Sign up</a>
+                </li>
+                <li>
+                    <a href="">Login</a>
+                </li>
+            </ul>
+            <ul class="nav-mob-list">
+                <li><span class="material-icons fw-bold fz-sm">menu</span></li>
+                <li>
+                    <h1 class="logo-mob">
+                        <a href="./aloha-index.html" alt="ALOHA">ALOHA</a>
+                    </h1>
                 </li>
                 <li>
                     <a href="">Login</a>
@@ -343,8 +354,8 @@
                 <button class="button btn-secondary btn-s">SEE MORE</button>
             </div>
             <ul class="row jc-space-between flex-wrap-w">
-                <li class="card col-md-4">
-                    <a href="">
+                <li class="card col-md-4 get-ins-card">
+                    <a href="#">
                         <div class="card-img-wrap ins-img mb-xs">
                             <img src="./img/ins-Italy.jpg" alt="">
                         </div>
@@ -356,8 +367,8 @@
                         </div>
                     </a>
                 </li>
-                <li class="card col-md-4">
-                    <a href="">
+                <li class="card col-md-4 get-ins-card">
+                    <a href="#">
                         <div class="card-img-wrap ins-img mb-xs">
                             <img src="./img/ins-Quebec.jpg" alt="">
                         </div>
@@ -370,8 +381,8 @@
                         </div>
                     </a>
                 </li>
-                <li class="card col-md-4">
-                    <a href="">
+                <li class="card col-md-4 get-ins-card">
+                    <a href="#">
                         <div class="card-img-wrap ins-img mb-xs">
                             <img src="./img/ins-Qatar.jpg" alt="">
                         </div>
