--- a/aloha-result.html
+++ b/aloha-result.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="shortcut icon" href="./img/5-Stars.ico"/>
+    <!-- OwlCarousel 2 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="./CSS/aloha.all.min.css">
     <title>ALOHA．result for Reykjavík</title>
 </head>
@@ -48,7 +50,7 @@
                                 <input type="text" placeholder="Reykjavík, Iceland" class="result-input">
                             </div>
                         </li>
-                        <li class="result-input-w d-flex ai-center mr-1 bgc-basic-w">
+                        <li class="result-input-w d-flex ai-center mr-1 bgc-basic-w result-input-date">
                             <span class="material-icons color-basic-b pl-1 pr-1">date_range</span>
                             <div class="w-40p">
                                 <p class="fz-ets fw-bold color-basic-b">Check-in</p>
@@ -59,6 +61,15 @@
                                 <input type="text" placeholder="23 June" class="result-input">
                             </div>
                         </li>
+                        <!-- date for mobile block start-->
+                        <li class="result-input-w d-flex ai-center mr-1 bgc-basic-w result-input-date-mob">
+                            <span class="material-icons color-basic-b pl-1 pr-1">date_range</span>
+                            <div class="w-100p">
+                                <p class="fz-ets fw-bold color-basic-b">Check-in / out</p>
+                                <input type="text" placeholder="21 June - 23 June" class="result-input">
+                            </div>
+                        </li>
+                        <!-- date for mobile block end -->
                         <li class="result-input-w d-flex ai-center mr-1 bgc-basic-w">
                             <span class="material-icons color-basic-b pl-1 pr-1">person</span>
                             <div class="w-100p">
@@ -73,50 +84,13 @@
         </section>
     </nav>
 
-    <!-- search bar -->
-    <!-- <section class="pt-xs pb-xs mb-xs bgc-secondary">
-        <div class="container">
-
-            <div class="d-flex bgc-secondary index-search-bar">
-                <ul class="d-flex jc-space-between">
-                    <li class="result-input-w d-flex ai-center mr-1 bgc-basic-w">
-                        <span class="material-icons color-basic-b pl-1 pr-1">location_on</span>
-                        <div class="w-100p">
-                            <p class="fz-ets fw-bold color-basic-b">Destination</p>
-                            <input type="text" placeholder="Reykjavík, Iceland" class="result-input">
-                        </div>
-                    </li>
-                    <li class="result-input-w d-flex ai-center mr-1 bgc-basic-w">
-                        <span class="material-icons color-basic-b pl-1 pr-1">date_range</span>
-                        <div class="w-40p">
-                            <p class="fz-ets fw-bold color-basic-b">Check-in</p>
-                            <input type="text" placeholder="21 June" class="result-input">
-                        </div>
-                        <div class="w-50p pl-1 border-l">
-                            <p class="fz-ets fw-bold color-basic-b">Check-out</p>
-                            <input type="text" placeholder="23 June" class="result-input">
-                        </div>
-                    </li>
-                    <li class="result-input-w d-flex ai-center mr-1 bgc-basic-w">
-                        <span class="material-icons color-basic-b pl-1 pr-1">person</span>
-                        <div class="w-100p">
-                            <p class="fz-ets fw-bold color-basic-b">Guests</p>
-                            <input type="text" placeholder="2 adults・1 room" class="result-input">
-                        </div>
-                    </li>
-                    <button class="button btn-primary btn-b">SEARCH</button>
-                </ul>
-            </div>
-        </div>
-    </section> -->
-
     <main class="result-main d-flex flex-d-col jc-center ai-center w-100p">
         <!-- main -->
         <section class="mb-lg">
             <div class="container">
                 <div class="row">
                     <!-- 左側選單 -->
-                    <section class="col-4">
+                    <aside class="col-4">
                         <div class="d-flex font-primary pt-10">
                             <h2 class="fz-m fw-bold mr-tiny">Reykjavík</h2>
                             <span class="color-primary">128</span>
@@ -230,23 +204,23 @@
                                 </ul>
                             </li>
                         </ul>
-                    </section>
+                    </aside>
                     <!-- 右側列表 -->
                     <section class="col-8">
                         <!-- 右側列表 --- 搜尋結果篩選  -->
-                        <ul class="d-flex pt-xs">
-                            <li class="result-tab-active mr-xs fw-bold">Recommended</li>
-                            <li class="mr-xs fw-bold">Best value</li>
-                            <li class="mr-xs fw-bold">Lowest Price</li>
-                            <li class="mr-xs fw-bold">Distance to City Center</li>
+                        <div class="d-flex pt-xs owl-carousel result-tab-list">
+                            <div class="result-tab result-tab-active fw-bold" data-merge="1">Recommended</div>
+                            <div class="result-tab fw-bold ta-center" data-merge="1">Best value</div>
+                            <div class="result-tab fw-bold ta-center" data-merge="1">Lowest Price</div>
+                            <div class="result-tab fw-bold ta-center" data-merge="2">Distance to City Center</div>
                             <!-- 右側列表 --- 搜尋結果列表 -->
-                        </ul>
+                        </div>
                         <ul class="mb-m  result-list">
                             <!-- appendData -->
                         </ul>
                         <!-- 右側列表 --- 頁碼 -->
                         <div class="pagination-bar d-flex jc-space-between ai-center bgc-secondary">
-                            <button class="button btn-secondary btn-s">PREVIOUS</button>
+                            <button class="paginationprv button btn-secondary btn-s">PREVIOUS</button>
                             <!-- ul.d-flex>li*5>a{$} -->
                             <ul class="d-flex">
                                 <li class="pagination pagination-active"><a href="">1</a></li>
@@ -259,6 +233,23 @@
                             </ul>
                             <button class="button btn-primary btn-s">NEXT</button>
                         </div>
+                            <!-- pagination-bar for mobile block start -->
+                            <div class="pagination-bar-mob jc-space-between ai-center bgc-secondary">
+                                <div class="pagination-mob-prv d-flex jc-center ai-center btn-secondary">
+                                    <span class="material-icons">navigate_before</span>
+                                </div>
+                                <ul class="d-flex">
+                                    <li class="pagination pagination-active"><a href="">1</a></li>
+                                    <li class="pagination"><a href="">2</a></li>
+                                    <li class="pagination"><a href="">3</a></li>
+                                    <li class="pagination"><a href="">...</a></li>
+                                    <li class="pagination"><a href="">7</a></li>
+                                </ul>
+                                <div class="pagination-mob-nxt d-flex jc-center ai-center btn-primary">
+                                    <span class="material-icons">navigate_next</span>
+                                </div>
+                            </div>
+                            <!-- pagination-bar for mobile block end -->
                     </section>
                 </div>
             </div>
@@ -266,11 +257,11 @@
         <!-- Subscribe for Exclusive Offer -->
         <section class="sub bgc-secondary w-100p">
             <div class="container d-flex ai-center h-100p">
-                <div class="d-flex jc-space-between w-100p h-100p">
-                    <p class="fz-m fw-bold font-primary color-basic-b mr-37">Subscribe for Exclusive Offer</p>
+                <div class="d-flex jc-space-between ai-center w-100p h-100p">
+                    <p class="sub-tit fz-m fw-bold font-primary color-basic-b mr-37">Subscribe for Exclusive Offer</p>
                     <div class="d-flex flex-1">
-                        <input type="text" name="" id="" placeholder="Your email address" class="input">
-                        <input type="submit" value="subscribe" class="button btn-primary btn-b">
+                        <input type="text" name="" id="" placeholder="Your email address" class="input sub-input">
+                        <input type="submit" value="subscribe" class="button btn-primary btn-b sub-btn">
                     </div>
                 </div>
             </div>
@@ -280,11 +271,11 @@
             <div class="container d-flex jc-space-between ai-center">
                 <p>© 2020 ALOHA, Inc. All rights reserved</p>
                 <ul class="d-flex">
-                    <li class="mr-xs"><a href="">FAQs</a></li>
-                    <li class="mr-xs"><a href="">Terms of use</a></li>
-                    <li><a href="">Privacy policy</a></li>
+                    <li class="mr-xs"><a href="#">FAQs</a></li>
+                    <li class="mr-xs"><a href="#">Terms of use</a></li>
+                    <li><a href="#">Privacy policy</a></li>
                 </ul>
-                <ul class="d-flex">
+                <ul class="d-xl-flex footer-select-list">
                     <li class="d-flex mr-xs">
                         <span class="material-icons mr-tiny">language</span>
                         <p>English</p>
@@ -302,6 +293,7 @@
 
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <script src="./JS/all.js"></script>
 <script>
 
@@ -310,6 +302,12 @@
     //     console.log("a",a);
     // })
 
+        $('.result-tab-list').owlCarousel({
+            loop:false,
+            nav: false,
+            dots: false,
+            merge:true,
+        })
 </script>
 
 </html>
