--- a/aloha-result.html
+++ b/aloha-result.html
@@ -139,15 +139,25 @@
                                 <!-- <div>
                                     <div class="price-rangeSlider"></div>
                                 </div> -->
-                                <div class="d-flex ai-center">
+                                <div class="budget-price d-flex ai-center jc-space-between">
                                     <div class="price-box">
                                         <p class="fz-ets fw-bold color-basic-b">Min price</p>
                                         <p class="fz-xxs color-tertiary">TWD 800</p>
                                     </div>
-                                    <div class="mr-tiny ml-tiny"> - </div>
+                                    <div class="price-dot mr-tiny ml-tiny"> - </div>
                                     <div class="price-box">
                                         <p class="fz-ets fw-bold color-basic-b">Max price</p>
                                         <p class="fz-xxs color-tertiary">TWD 8000</p>
+                                    </div>
+                                </div>
+                                <div class="budget-price-mob ai-center jc-center bgc-basic-w">
+                                    <div class="w-50p">
+                                        <p class="fz-ets fw-bold color-basic-b">Min price</p>
+                                        <p class="fz-ets color-tertiary">TWD 800</p>
+                                    </div>
+                                    <div class="w-50p pl-tiny border-l">
+                                        <p class="fz-ets fw-bold color-basic-b">Max price</p>
+                                        <p class="fz-ets color-tertiary">TWD 8000</p>
                                     </div>
                                 </div>
                             </li>
