result mob result-aside-mob, index-search-bar-mob rwd

--- a/aloha-result.html
+++ b/aloha-result.html
@@ -94,15 +94,15 @@
                         <button class="button btn-primary btn-b">SEARCH</button>
                     </ul>
                 </div>
-                <div class="bgc-secondary index-search-bar-mob">
-                    <ul class="">
-                        <li class="bgc-secondary">
+                <div class="bgc-secondary index-search-bar-mob w100p">
+                    <ul class="d-flex jc-space-between w-100p">
+                        <li class="d-flex ai-center bgc-secondary">
                             <input type="text" placeholder="Reykjavík" class="result-input-mob">
                         </li>
-                        <li class="bgc-secondary">
+                        <li class="d-flex ai-center bgc-secondary border-l">
                             <input type="text" placeholder="21 June - 23 June" class="result-input-mob">
                         </li>
-                        <li class="bgc-secondary">
+                        <li class="d-flex ai-center bgc-secondary border-l">
                             <input type="text" placeholder="2 adults・1 room" class="result-input-mob">
                         </li>
                     </ul>
@@ -242,6 +242,22 @@
                             </li>
                         </ul>
                     </aside>
+                    <div class="flex-d-col w-100p result-aside-mob ">                        
+                        <div class="d-flex jc-center mt-1 mb-1 font-primary">
+                            <h2 class="fz-m fw-bold mr-tiny">Reykjavík</h2>
+                            <span class="color-primary">128</span>
+                        </div>
+                        <ul class="d-flex ai-center mb-xs color-basic-b">
+                            <li class="d-flex jc-center ai-center fw-bold flex-1">
+                                <span class="material-icons mr-tiny">filter_list</span>
+                                <p>Filter</p>
+                            </li>
+                            <li class="d-flex jc-center ai-center fw-bold flex-1  border-l">
+                                <span class="material-icons mr-tiny">sort</span>
+                                <p>Sort</p>
+                            </li>
+                        </ul>
+                    </div>
                     <!-- 右側列表 -->
                     <section class="col-12 col-sm-8 result-content">
                         <!-- 右側列表 --- 搜尋結果篩選  -->
