detail table rwd

--- a/aloha-result.html
+++ b/aloha-result.html
@@ -56,7 +56,7 @@
         <section class="pt-xs pb-xs bgc-secondary">
             <div class="container w-100p">
                 <div class="d-flex bgc-secondary index-search-bar">
-                    <ul class="d-flex jc-space-between">
+                    <ul class="d-flex jc-space-between w-100p">
                         <li class="result-input-w d-flex ai-center mr-1 bgc-basic-w">
                             <span class="material-icons color-basic-b pl-1 pr-1">location_on</span>
                             <div class="w-100p">
