--- a/aloha-detail.html
+++ b/aloha-detail.html
@@ -54,7 +54,7 @@
         <section class="pt-xs pb-xs bgc-secondary">
             <div class="container w-100p">
                 <div class="d-flex bgc-secondary index-search-bar">
-                    <ul class="d-flex jc-space-between">
+                    <ul class="d-flex jc-space-between w-100p">
                         <li class="result-input-w d-flex ai-center mr-1 bgc-basic-w">
                             <span class="material-icons color-basic-b pl-1 pr-1">location_on</span>
                             <div class="w-100p">
@@ -131,7 +131,7 @@
                                 <div class="gallery gallery-s mb-tiny">
                                     <img src="./img/hr_1_3.jpg" alt="">
                                 </div>
-                                <div class="button btn-b btn-primary btn-bg-b ta-center">See All 10 Photos</div>
+                                <div class="button btn-b btn-primary btn-bg-b ta-center btn-see">See All 10 Photos</div>
                             </div>
                         </div>
                     </div>
@@ -174,21 +174,21 @@
         <section class="result-room-type mb-lg">
             <div class="container">
                 <div class="row result-b-btm-sec pb-tiny">
-                    <div class="col-6">
+                    <div class="col-lg-6 col-md-7">
                         <h5 class="fw-bold">ROOM TYPE</h5>
                     </div>
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-1 p-0">
                         <h5 class="ta-center fw-bold">SLEEPS</h5>
                     </div>
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-2 p-0">
                         <h5 class="ta-center fw-bold">PRICE</h5>
                     </div>
-                    <div class="col-2">
+                    <div class="col-lg-2 col-md-2 p-0">
                         <h5 class="ta-center fw-bold">ROOMS</h5>
                     </div>
                 </div>
                 <div class="row pt-xs pb-xs result-b-btm-sec">
-                    <div class="col-6">
+                    <div class="col-lg-6 col-md-7">
                         <div class="type-list d-flex">
                             <div class="type-list-img">
                                 <img src="./img/hr_3.jpg" alt="">
@@ -198,59 +198,59 @@
                                     <p class="fw-bold">Deluxe Double Room A</p>
                                     <p class="fz-ets">1 bed (Queen size)</p>
                                 </div>
-                                <ul class="d-flex flex-wrap-w fz-xxs color-tertiary">
+                                <ul class="d-flex flex-wrap-w fz-xxs color-tertiary room-fea-list">
                                     <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">wifi</span>
-                                        <p>Wi-Fi</p>
+                                        <p class="d-md-none d-lg-block">Wi-Fi</p>
                                     </li>
                                     <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">room_service</span>
-                                        <p>Room Service</p>
+                                        <p class="d-md-none d-lg-block">Room Service</p>
                                     </li>
                                     <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">restaurant</span>
-                                        <p>Breakfast</p>
+                                        <p class="d-md-none d-lg-block">Breakfast</p>
                                     </li>
                                     <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">smoke_free</span>
-                                        <p>Smoke Free</p>
+                                        <p class="d-md-none d-lg-block">Smoke Free</p>
                                     </li>
                                     <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">local_bar</span>
-                                        <p>Mini Bar</p>
+                                        <p class="d-md-none d-lg-block">Mini Bar</p>
                                     </li>
                                     <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">tv</span>
-                                        <p>Television</p>
+                                        <p class="d-md-none d-lg-block">Television</p>
                                     </li>
-                                    <li class="d-flex ai-center w-50p">
+                                    <li class="d-flex ai-center w-50p d-md-none d-lg-block">
                                         <span class="material-icons mr-4">ac_unit</span>
-                                        <p>Air Conditioner</p>
+                                        <p class="d-md-none d-lg-block">Air Conditioner</p>
                                     </li>
-                                    <li class="d-flex ai-center w-50p">
+                                    <li class="d-flex ai-center w-50p d-md-none d-lg-block">
                                         <span class="material-icons mr-4">kitchen</span>
-                                        <p>Refrigerator</p>
+                                        <p class="d-md-none d-lg-block">Refrigerator</p>
                                     </li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-2 d-flex jc-center ai-center color-basic-b">
+                    <div class="col-lg-2 col-md-1 d-flex jc-center ai-center color-basic-b">
                         <span class="material-icons">person</span>
                         <span class="material-icons">person</span>
                     </div>
-                    <div class="col-2 d-flex jc-center ai-center flex-d-col">
+                    <div class="col-lg-2 col-md-2 d-flex jc-center ai-center flex-d-col">
                         <p>TWD 1,600</p>
                         <p class="fz-ets">per night</p>
                     </div>
-                    <div class="col-2 d-flex jc-center ai-center color-basic-b">
+                    <div class="col-lg-2 col-md-2 d-flex jc-center ai-center color-basic-b">
                         <span class="material-icons">add</span>
                         <p class="mr-xs ml-xs">1</p>
                         <span class="material-icons">remove</span>
                     </div>
                 </div>
                 <div class="row pt-xs pb-xs result-b-btm-sec">
-                    <div class="col-6">
+                    <div class="col-lg-6 col-md-7">
                         <div class="type-list d-flex">
                             <div class="type-list-img">
                                 <img src="./img/hr_6.jpg" alt="">
@@ -260,14 +260,14 @@
                                     <p class="fw-bold">Deluxe Double Room B</p>
                                     <p class="fz-ets">1 bed (Queen size)</p>
                                 </div>
-                                <ul class="d-flex flex-wrap-w fz-xxs color-tertiary">
+                                <ul class="d-flex flex-wrap-w fz-xxs color-tertiary room-fea-list">
                                     <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">wifi</span>
-                                        <p>Wi-Fi</p>
+                                        <p class="d-md-none d-lg-block">Wi-Fi</p>
                                     </li>
                                     <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">room_service</span>
-                                        <p>Room Service</p>
+                                        <p class="d-md-none d-lg-block">Room Service</p>
                                     </li>
                                     <!-- <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">restaurant</span>
@@ -275,7 +275,7 @@
                                     </li> -->
                                     <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">smoke_free</span>
-                                        <p>Smoke Free</p>
+                                        <p class="d-md-none d-lg-block">Smoke Free</p>
                                     </li>
                                     <!-- <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">local_bar</span>
@@ -283,11 +283,11 @@
                                     </li> -->
                                     <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">tv</span>
-                                        <p>Television</p>
+                                        <p class="d-md-none d-lg-block">Television</p>
                                     </li>
-                                    <li class="d-flex ai-center w-50p">
+                                    <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">ac_unit</span>
-                                        <p>Air Conditioner</p>
+                                        <p class="d-md-none d-lg-block">Air Conditioner</p>
                                     </li>
                                     <!-- <li class="d-flex ai-center w-50p">
                                         <span class="material-icons mr-4">kitchen</span>
@@ -297,22 +297,22 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-2 d-flex jc-center ai-center color-basic-b">
+                    <div class="col-lg-2 col-md-1 d-flex jc-center ai-center color-basic-b">
                         <span class="material-icons">person</span>
                         <span class="material-icons">person</span>
                     </div>
-                    <div class="col-2 d-flex jc-center ai-center flex-d-col">
+                    <div class="col-lg-2 col-md-2 d-flex jc-center ai-center flex-d-col">
                         <p>TWD 1,600</p>
                         <p class="fz-ets">per night</p>
                     </div>
-                    <div class="col-2 d-flex jc-center ai-center color-basic-b">
+                    <div class="col-lg-2 col-md-2 d-flex jc-center ai-center color-basic-b">
                         <span class="material-icons">add</span>
                         <p class="mr-xs ml-xs">0</p>
                         <span class="material-icons">remove</span>
                     </div>
                 </div>
                 <div class="row pt-xs pb-xs">
-                    <div class="col-6">
+                    <div class="col-lg-6 col-md-7">
                         <div class="type-list d-flex">
                             <div class="type-list-img">
                                 <img src="./img/hr_8.jpg" alt="">
@@ -322,14 +322,14 @@
                                     <p class="fw-bold">Deluxe Suite with Pool</p>
                                     <p class="fz-ets">1 bed (King  size)</p>
                                 </div>
-                                <ul class="d-flex flex-wrap-w fz-xxs color-tertiary">
+                                <ul class="d-flex flex-wrap-w fz-xxs color-tertiary room-fea-list">
                                     <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">wifi</span>
-                                        <p>Wi-Fi</p>
+                                        <p class="d-md-none d-lg-block">Wi-Fi</p>
                                     </li>
                                     <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">room_service</span>
-                                        <p>Room Service</p>
+                                        <p class="d-md-none d-lg-block">Room Service</p>
                                     </li>
                                     <!-- <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">restaurant</span>
@@ -337,7 +337,7 @@
                                     </li> -->
                                     <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">smoke_free</span>
-                                        <p>Smoke Free</p>
+                                        <p class="d-md-none d-lg-block">Smoke Free</p>
                                     </li>
                                     <!-- <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">local_bar</span>
@@ -345,11 +345,11 @@
                                     </li> -->
                                     <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">tv</span>
-                                        <p>Television</p>
+                                        <p class="d-md-none d-lg-block">Television</p>
                                     </li>
-                                    <li class="d-flex ai-center w-50p">
+                                    <li class="d-flex ai-center w-50p mb-tiny">
                                         <span class="material-icons mr-4">ac_unit</span>
-                                        <p>Air Conditioner</p>
+                                        <p class="d-md-none d-lg-block">Air Conditioner</p>
                                     </li>
                                     <!-- <li class="d-flex ai-center w-50p">
                                         <span class="material-icons mr-4">kitchen</span>
@@ -359,15 +359,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-2 d-flex jc-center ai-center color-basic-b">
+                    <div class="col-lg-2 col-md-1 d-flex jc-center ai-center color-basic-b">
                         <span class="material-icons">person</span>
                         <span class="material-icons">person</span>
                     </div>
-                    <div class="col-2 d-flex jc-center ai-center flex-d-col">
+                    <div class="col-lg-2 col-md-2 d-flex jc-center ai-center flex-d-col">
                         <p>TWD 3,600</p>
                         <p class="fz-ets">per night</p>
                     </div>
-                    <div class="col-2 d-flex jc-center ai-center color-basic-b">
+                    <div class="col-lg-2 col-md-2 d-flex jc-center ai-center color-basic-b">
                         <span class="material-icons">add</span>
                         <p class="mr-xs ml-xs">1</p>
                         <span class="material-icons">remove</span>
@@ -378,11 +378,11 @@
         <!-- Subscribe for Exclusive Offer -->
         <section class="sub bgc-secondary w-100p">
             <div class="container d-flex ai-center h-100p">
-                <div class="d-flex jc-space-between w-100p h-100p">
-                    <p class="fz-m fw-bold font-primary color-basic-b mr-37">Subscribe for Exclusive Offer</p>
+                <div class="d-flex jc-space-between ai-center w-100p h-100p sub-mob-wrap">
+                    <p class="sub-tit fz-m fw-bold font-primary color-basic-b mr-37">Subscribe for Exclusive Offer</p>
                     <div class="d-flex flex-1">
-                        <input type="text" name="" id="" placeholder="Your email address" class="input">
-                        <input type="submit" value="subscribe" class="button btn-primary btn-b">
+                        <input type="text" name="" id="" placeholder="Your email address" class="input sub-input">
+                        <input type="submit" value="subscribe" class="button btn-primary btn-b sub-btn">
                     </div>
                 </div>
             </div>
@@ -392,11 +392,11 @@
             <div class="container d-flex jc-space-between ai-center">
                 <p>© 2020 ALOHA, Inc. All rights reserved</p>
                 <ul class="d-flex">
-                    <li class="mr-xs"><a href="">FAQs</a></li>
-                    <li class="mr-xs"><a href="">Terms of use</a></li>
-                    <li><a href="">Privacy policy</a></li>
+                    <li class="mr-xs"><a href="#">FAQs</a></li>
+                    <li class="mr-xs"><a href="#">Terms of use</a></li>
+                    <li><a href="#">Privacy policy</a></li>
                 </ul>
-                <ul class="d-flex">
+                <ul class="d-xl-flex footer-select-list">
                     <li class="d-flex mr-xs">
                         <span class="material-icons mr-tiny">language</span>
                         <p>English</p>
