detail mobile rwd (1/3)

--- a/aloha-detail.html
+++ b/aloha-detail.html
@@ -92,18 +92,11 @@
                         <button class="button btn-primary btn-b">SEARCH</button>
                     </ul>
                 </div>
-                <div class="bgc-secondary index-search-bar-mob w100p">
-                    <ul class="d-flex jc-space-between w-100p">
-                        <li class="d-flex ai-center bgc-secondary">
-                            <input type="text" placeholder="Reykjavík" class="result-input-mob">
-                        </li>
-                        <li class="d-flex ai-center bgc-secondary border-l">
-                            <input type="text" placeholder="21 June - 23 June" class="result-input-mob">
-                        </li>
-                        <li class="d-flex ai-center bgc-secondary border-l">
-                            <input type="text" placeholder="2 adults・1 room" class="result-input-mob">
-                        </li>
-                    </ul>
+                <div class="bgc-secondary index-search-bar-mob">
+                    <div class="d-flex ai-center">
+                        <span class="material-icons mr-1">arrow_back</span>
+                        <p class="fz-ets">Bangkok・17 June - 19 June・2 adults・1 room</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -142,8 +135,8 @@
         <section class="result-room mb-lg">
             <div class="container">
                 <div class="row">
-                    <div class="col-7 pr-tiny">
-                        <div class="d-flex ai-center">
+                    <div class="col-sm-12 col-md-7 result-room-info">
+                        <div class="d-flex ai-center result-room-info-top">
                             <h3 class="fz-m fw-bold color-basic-b mr-1 mb-tiny">Skuggia Hotel</h3>
                             <div class="d-flex fz-xxs">
                                 <p class="color-basic-b">★★★★★</p>
@@ -161,7 +154,7 @@
             <div class="container">
                 <div class="row">
                     <h2 class="col-12 seb-tit mb-xs">Select Your Room</h2>
-                    <ul class="col-12 d-flex ai-center">
+                    <ul class="col-12 d-flex ai-center result-sel-room-list">
                         <li class="select-tab mr-tiny">Reykjavík, Iceland</li>
                         <li class="select-tab mr-tiny">21 June - 23 June・2 nights</li>
                         <li class="select-tab mr-xs">2 adults・1 room</li>
@@ -173,7 +166,7 @@
         <!-- room type -->
         <section class="result-room-type mb-lg">
             <div class="container">
-                <div class="row result-b-btm-sec pb-tiny">
+                <div class="row result-b-btm-sec pb-tiny result-room-type-tit">
                     <div class="col-lg-6 col-md-7">
                         <h5 class="fw-bold">ROOM TYPE</h5>
                     </div>
