detail mobile rwd (2/3)

--- a/aloha-detail.html
+++ b/aloha-detail.html
@@ -368,6 +368,138 @@
                 </div>      
             </div>
         </section>
+        <!-- -- room type mobile block start -->
+        <section class="result-room-type-mob mb-lg">
+            <div class="container">
+                <div class="result-b-btm-sec mb-tiny">
+                    <div class="d-flex type-list-mob">
+                        <div class="type-list-mob-img">
+                            <img src="./img/hr_3.jpg" alt="">
+                        </div>
+                        <div class="type-list-mob-info">
+                            <p class="fw-bold mb-mini">Deluxe Double Room</p>
+                            <p class="fz-ets mb-tiny">1 bed (Queen size)</p>
+                            <ul class="room-fea-list d-flex mb-1">
+                                <li>
+                                    <span class="material-icons mr-4">wifi</span>
+                                </li>
+                                <li>
+                                    <span class="material-icons mr-4">room_service</span>
+                                </li>
+                                <li>
+                                    <span class="material-icons mr-4">smoke_free</span>
+                                </li>
+                                <li>
+                                    <span class="material-icons mr-4">ac_unit</span>
+                                </li>
+                                <li>
+                                    <span class="material-icons mr-4">restaurant</span>
+                                </li>
+                            </ul>
+                            <div class="d-flex ai-center color-basic-b">
+                                <span class="material-icons">person</span>
+                                <span class="material-icons">person</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-flex jc-space-between pt-1 pb-1 pl-tiny pr-tiny w-100p bgc-secondary">
+                        <div class="d-flex jc-center ai-center color-basic-b">
+                            <span class="material-icons fw-bold">add</span>
+                            <p class="mr-xs ml-xs">1</p>
+                            <span class="material-icons fw-bold">remove</span>
+                        </div>
+                        <div class="d-flex jc-center ai-center fw-bold">
+                            <p>TWD 1,600</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="result-b-btm-sec mb-tiny">
+                    <div class="d-flex type-list-mob">
+                        <div class="type-list-mob-img">
+                            <img src="./img/hr_6.jpg" alt="">
+                        </div>
+                        <div class="type-list-mob-info">
+                            <p class="fw-bold mb-mini">Deluxe Double Room</p>
+                            <p class="fz-ets mb-tiny">1 bed (Queen size)</p>
+                            <ul class="room-fea-list d-flex mb-1">
+                                <li>
+                                    <span class="material-icons mr-4">wifi</span>
+                                </li>
+                                <li>
+                                    <span class="material-icons mr-4">room_service</span>
+                                </li>
+                                <li>
+                                    <span class="material-icons mr-4">smoke_free</span>
+                                </li>
+                                <li>
+                                    <span class="material-icons mr-4">ac_unit</span>
+                                </li>
+                                <li>
+                                    <span class="material-icons mr-4">restaurant</span>
+                                </li>
+                            </ul>
+                            <div class="d-flex ai-center color-basic-b">
+                                <span class="material-icons">person</span>
+                                <span class="material-icons">person</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-flex jc-space-between pt-1 pb-1 pl-tiny pr-tiny w-100p bgc-secondary">
+                        <div class="d-flex jc-center ai-center color-basic-b">
+                            <span class="material-icons fw-bold">add</span>
+                            <p class="mr-xs ml-xs">1</p>
+                            <span class="material-icons fw-bold">remove</span>
+                        </div>
+                        <div class="d-flex jc-center ai-center fw-bold">
+                            <p>TWD 1,600</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="result-b-btm-sec">
+                    <div class="d-flex type-list-mob">
+                        <div class="type-list-mob-img">
+                            <img src="./img/hr_8.jpg" alt="">
+                        </div>
+                        <div class="type-list-mob-info">
+                            <p class="fw-bold mb-mini">Deluxe Suite with Pool</p>
+                            <p class="fz-ets mb-tiny">1 bed (Queen size)</p>
+                            <ul class="room-fea-list d-flex mb-1">
+                                <li>
+                                    <span class="material-icons mr-4">wifi</span>
+                                </li>
+                                <li>
+                                    <span class="material-icons mr-4">room_service</span>
+                                </li>
+                                <li>
+                                    <span class="material-icons mr-4">smoke_free</span>
+                                </li>
+                                <li>
+                                    <span class="material-icons mr-4">ac_unit</span>
+                                </li>
+                                <li>
+                                    <span class="material-icons mr-4">restaurant</span>
+                                </li>
+                            </ul>
+                            <div class="d-flex ai-center color-basic-b">
+                                <span class="material-icons">person</span>
+                                <span class="material-icons">person</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-flex jc-space-between pt-1 pb-1 pl-tiny pr-tiny w-100p bgc-secondary">
+                        <div class="d-flex jc-center ai-center color-basic-b">
+                            <span class="material-icons fw-bold">add</span>
+                            <p class="mr-xs ml-xs">1</p>
+                            <span class="material-icons fw-bold">remove</span>
+                        </div>
+                        <div class="d-flex jc-center ai-center fw-bold">
+                            <p>TWD 1,600</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section >
+        <!-- -- room type mobile block end -->
         <!-- Subscribe for Exclusive Offer -->
         <section class="sub bgc-secondary w-100p">
             <div class="container d-flex ai-center h-100p">
