--- a/aloha-detail.html
+++ b/aloha-detail.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="shortcut icon" href="./img/5-Stars.ico"/>
+    <!-- OwlCarousel 2 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <!--  -->
     <link rel="stylesheet" href="./CSS/aloha.all.min.css">
     <title>ALOHA．Skuggia Hotel</title>
 </head>
 <body>
     <!-- navbar -->
-    <nav class="result-navbar">
+    <nav class="result-navbar w-100p">
         <div class="container d-flex jc-space-between ai-center pt-xs pb-xs">
             <h1 class="logo">
                 <a href="./aloha-index.html" alt="ALOHA">ALOHA</a>
@@ -131,6 +133,15 @@
                 </div>
             </div>
         </section>
+        <!-- -- gallery mobile block start -->
+        <section class="result-gallery-mob w-100p mb-1">
+            <div class="gallery-list-mob owl-carousel">
+                <img src="./img/hr_1.jpg" alt="">
+                <img src="./img/hr_1_5.jpg" alt="">
+                <img src="./img/hr_1_2.jpg" alt="">
+            </div>
+        </section>
+        <!-- -- gallery mobile block end -->
         <!-- ROOM -->
         <section class="result-room mb-lg">
             <div class="container">
@@ -538,5 +549,14 @@
     </main>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <script src="./JS/all.js"></script>
+<script>
+    $('.gallery-list-mob').owlCarousel({
+        items: 1,
+        loop: true,
+        nav: false,
+        dots: false,
+    })
+</script>
 </html>
